--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" /> 
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 <head>
     <title>疯言疯语</title>
     <!-- <link rel="shortcut icon" href="./favicon.ico" /> -->
