--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header id="header">
-        <h1>谁也不能阻止我说话</h1>
+        <h1>疯言疯语</h1>
     </header>
     <main id="app">
         <aside>
