--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main id="app">
         <aside>
             <p id="describe">
-                一个中年人对自己对生活的疯言疯语，所以这里没有点赞评论、阅读量以及随之而来的社交压力，我也不关心你多久会点开与忘记这个站点，因为它的全部意义就在于迎合我自己。
+                一个人对自己、对生活的疯言疯语，所以这里没有点赞、评论、阅读量以及随之而来的社交压力，我也不关心你多久会点开与忘记这个地方，因为它的全部意义就在于迎合我自己。
             </p>
         </aside>
         <p class="tip">现在总共疯了 {{count}} 条</p>
