--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main id="app">
         <aside>
             <p id="describe">
-                这是我对自己、对生活的疯言疯语，所以这里没有点赞、评论、阅读量以及随之而来的社交压力，也不关心谁会多久会点开这个地方，因为它的全部意义就在于迎合我自己。
+                这里是摘至网络上对个人、对生活的疯言疯语，也有自己在某个时刻的情绪宣泄，所有那些能感动的、欢笑的、深思的crazytalk，它的全部意义能清楚的看清自己和这个世界。
             </p>
         </aside>
         <p class="tip">现在总共疯了 {{count}} 条</p>
