--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main id="app">
         <aside>
             <p id="describe">
-                这里是摘至网络上对个人、对生活的疯言疯语，也有自己在某个时刻的情绪宣泄，所有那些能感动的、欢笑的、深思的crazytalk，它的全部意义能清楚的看清自己和这个世界。
+                这里是摘至网络上对个人、对生活的疯言疯语，也有自己在某个时刻的情绪宣泄，所有那些能让我感动的、欢笑的、深思的crazytalk，它的全部意义就是能让我更清楚的了解自己和这个世界。
             </p>
         </aside>
         <p class="tip">现在总共疯了 {{count}} 条</p>
